--- a/aio.ipynb
+++ b/aio.ipynb
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-05 17:01:35,634\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
+      "2024-05-06 14:37:52,348\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
       "{29: {'val': {'accuracy': 89.18, 'F1-score': 89.09, 'loss': 0.3},\n",
       "      'test': {'accuracy': 88.06, 'F1-score': 88.66, 'loss': 0.29}},\n",
       " 109: {'val': {'accuracy': 88.67, 'F1-score': 88.84, 'loss': 0.34},\n",
@@ -999,7 +999,7 @@
       "{'val': {'accuracy': 88.74, 'F1-score': 88.86, 'loss': 0.34},\n",
       " 'test': {'accuracy': 86.77, 'F1-score': 87.75, 'loss': 0.35}}\n",
       "---------TWR---------\n",
-      "2024-05-05 17:01:35,673\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-06 14:37:52,381\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  29 109 38 14 44\n",
       "{29: {'val': {'accuracy': 90.88, 'F1-score': 90.9, 'loss': 1.1},\n",
       "      'test': {'accuracy': 88.76, 'F1-score': 89.25, 'loss': 1.21}},\n",
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-05 17:01:53,244\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
+      "2024-05-06 14:38:08,492\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
       "{29: {'val': {'accuracy': 90.33, 'F1-score': 90.3, 'loss': 0.26},\n",
       "      'test': {'accuracy': 88.4, 'F1-score': 88.99, 'loss': 0.28}},\n",
       " 42: {'val': {'accuracy': 89.29, 'F1-score': 89.16, 'loss': 0.29},\n",
@@ -1151,7 +1151,7 @@
       "{'val': {'accuracy': 89.7, 'F1-score': 89.78, 'loss': 0.3},\n",
       " 'test': {'accuracy': 87.41, 'F1-score': 88.26, 'loss': 0.33}}\n",
       "---------TWR---------\n",
-      "2024-05-05 17:01:53,308\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-06 14:38:08,494\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  29 42 38 54 1\n",
       "{29: {'val': {'accuracy': 90.91, 'F1-score': 90.86, 'loss': 1.12},\n",
       "      'test': {'accuracy': 88.9, 'F1-score': 89.34, 'loss': 1.19}},\n",
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -3039,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -3047,7 +3047,13 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-05 17:02:37,572\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
+      "2024-05-06 14:38:23,414\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "{0: {'val': {'accuracy': 91.62, 'F1-score': 88.8, 'loss': 0.23}},\n",
       " 23: {'val': {'accuracy': 91.6, 'F1-score': 88.79, 'loss': 0.23}},\n",
       " 78: {'val': {'accuracy': 91.54, 'F1-score': 88.75, 'loss': 0.23}},\n",
@@ -3055,7 +3061,7 @@
       " 33: {'val': {'accuracy': 91.48, 'F1-score': 88.64, 'loss': 0.23}}}\n",
       "{'val': {'accuracy': 91.56, 'F1-score': 88.74, 'loss': 0.23}}\n",
       "---------TWR---------\n",
-      "2024-05-05 17:02:37,578\u001b[32m <INFO> WatchDog: success/total: 30/30\u001b[0m\n",
+      "2024-05-06 14:38:23,637\u001b[32m <INFO> WatchDog: success/total: 30/30\u001b[0m\n",
       "best_sedds_of_stage1:  33 18 78 31 23\n",
       "{33: {'val': {'accuracy': 91.45, 'F1-score': 88.69, 'loss': 1.02}},\n",
       " 18: {'val': {'accuracy': 91.45, 'F1-score': 88.64, 'loss': 1.04}},\n",
@@ -3106,7 +3112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -3670,7 +3676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -3678,23 +3684,20 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-05 17:04:24,106 <DEBUG> WatchDog: ❌ Failed: outputs/MRPC/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/2e-05/55\u001b[0m\n",
-      "2024-05-05 17:04:24,107 <DEBUG> WatchDog: ❌ Failed: outputs/MRPC/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/2e-05/54\u001b[0m\n",
-      "2024-05-05 17:04:24,110\u001b[32m <INFO> WatchDog: success/total: 28/30\u001b[0m\n",
-      "{35: {'val': {'accuracy': 87.01, 'F1-score': 90.91, 'loss': 0.39},\n",
-      "      'test': {'accuracy': 85.51, 'F1-score': 89.49, 'loss': 0.43}},\n",
-      " 43: {'val': {'accuracy': 85.05, 'F1-score': 89.43, 'loss': 0.38},\n",
-      "      'test': {'accuracy': 85.28, 'F1-score': 89.28, 'loss': 0.42}},\n",
-      " 45: {'val': {'accuracy': 87.5, 'F1-score': 90.88, 'loss': 0.31},\n",
-      "      'test': {'accuracy': 84.93, 'F1-score': 88.71, 'loss': 0.35}},\n",
-      " 49: {'val': {'accuracy': 85.54, 'F1-score': 89.74, 'loss': 0.37},\n",
-      "      'test': {'accuracy': 84.58, 'F1-score': 88.71, 'loss': 0.42}},\n",
-      " 38: {'val': {'accuracy': 85.78, 'F1-score': 89.93, 'loss': 0.39},\n",
-      "      'test': {'accuracy': 84.35, 'F1-score': 88.53, 'loss': 0.43}}}\n",
-      "{'val': {'accuracy': 86.18, 'F1-score': 90.18, 'loss': 0.37},\n",
-      " 'test': {'accuracy': 84.93, 'F1-score': 88.94, 'loss': 0.41}}\n",
+      "{35: {'val': {'accuracy': 86.27, 'F1-score': 90.48, 'loss': 1.66},\n",
+      "      'test': {'accuracy': 84.81, 'F1-score': 89.0, 'loss': 1.9}},\n",
+      " 37: {'val': {'accuracy': 84.56, 'F1-score': 89.04, 'loss': 1.61},\n",
+      "      'test': {'accuracy': 84.52, 'F1-score': 88.68, 'loss': 1.81}},\n",
+      " 44: {'val': {'accuracy': 86.03, 'F1-score': 90.19, 'loss': 1.58},\n",
+      "      'test': {'accuracy': 84.46, 'F1-score': 88.6, 'loss': 1.85}},\n",
+      " 53: {'val': {'accuracy': 86.27, 'F1-score': 90.41, 'loss': 1.68},\n",
+      "      'test': {'accuracy': 84.41, 'F1-score': 88.68, 'loss': 1.9}},\n",
+      " 57: {'val': {'accuracy': 85.54, 'F1-score': 89.95, 'loss': 1.7},\n",
+      "      'test': {'accuracy': 84.35, 'F1-score': 88.63, 'loss': 1.96}}}\n",
+      "{'val': {'accuracy': 85.73, 'F1-score': 90.01, 'loss': 1.65},\n",
+      " 'test': {'accuracy': 84.51, 'F1-score': 88.72, 'loss': 1.88}}\n",
       "---------TWR---------\n",
-      "2024-05-05 17:04:24,114\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-06 14:40:03,437\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  35 37 44 53 57\n",
       "{35: {'val': {'accuracy': 86.27, 'F1-score': 90.48, 'loss': 1.66},\n",
       "      'test': {'accuracy': 84.81, 'F1-score': 89.0, 'loss': 1.9}},\n",
@@ -3726,10 +3729,10 @@
     "# for seed_dir in seeds_dir.iterdir():\n",
     "#     if int(seed_dir.name) not in metric_dicts.keys():\n",
     "#         shutil.rmtree(seed_dir)\n",
-    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
-    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
-    "# seeds = \"29 109 38 14 44\"\n",
-    "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "# metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
+    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "seeds = \"35 37 44 53 57\"\n",
+    "metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
     "pp(metric_dict_topk)\n",
     "pp(mean)\n",
     "\n",
@@ -3751,21 +3754,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 230,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------TWR-H/P---------\n",
+      "14 5 40 4 3\n",
+      "{35: {'val': {'acc_pipline': 87.01, 'f1_pipline': 90.85, 'accuracy': 86.52, 'F1-score': 90.53, 'loss': 1.65},\n",
+      "      'test': {'acc_pipline': 84.06, 'f1_pipline': 88.3, 'accuracy': 85.45, 'F1-score': 89.36, 'loss': 1.9}},\n",
+      " 44: {'val': {'acc_pipline': 86.76, 'f1_pipline': 90.69, 'accuracy': 86.27, 'F1-score': 90.38, 'loss': 1.61},\n",
+      "      'test': {'acc_pipline': 84.23, 'f1_pipline': 88.4, 'accuracy': 84.75, 'F1-score': 88.91, 'loss': 1.89}},\n",
+      " 53: {'val': {'acc_pipline': 86.52, 'f1_pipline': 90.37, 'accuracy': 85.78, 'F1-score': 89.86, 'loss': 1.67},\n",
+      "      'test': {'acc_pipline': 83.42, 'f1_pipline': 87.73, 'accuracy': 84.58, 'F1-score': 88.62, 'loss': 1.9}},\n",
+      " 37: {'val': {'acc_pipline': 85.05, 'f1_pipline': 89.28, 'accuracy': 84.56, 'F1-score': 88.97, 'loss': 1.63},\n",
+      "      'test': {'acc_pipline': 83.94, 'f1_pipline': 88.06, 'accuracy': 84.52, 'F1-score': 88.58, 'loss': 1.83}},\n",
+      " 57: {'val': {'acc_pipline': 86.52, 'f1_pipline': 90.6, 'accuracy': 85.29, 'F1-score': 89.76, 'loss': 1.71},\n",
+      "      'test': {'acc_pipline': 83.71, 'f1_pipline': 88.08, 'accuracy': 84.23, 'F1-score': 88.53, 'loss': 1.97}}}\n",
+      "{'val': {'acc_pipline': 86.37, 'f1_pipline': 90.36, 'accuracy': 85.68, 'F1-score': 89.9, 'loss': 1.65},\n",
+      " 'test': {'acc_pipline': 83.87, 'f1_pipline': 88.11, 'accuracy': 84.71, 'F1-score': 88.8, 'loss': 1.9}}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"---------TWR-H/P---------\")\n",
     "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
     "metric_for_compare = \"acc_pipline\"\n",
     "metric_for_compare = \"accuracy\"\n",
     "\n",
-    "ratio = 0.8\n",
+    "ratio = 0.4\n",
     "\n",
     "metric_dicts = dict()\n",
     "seeds = []\n",
     "for seed_of_stage1 in best_seeds_of_stage1:\n",
-    "    seeds_dir = f\"outputs/MRPC/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
+    "    seeds_dir = f\"outputs/MRPC/bert-base-uncased/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
     "    seeds_dir = Path(seeds_dir)\n",
     "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
     "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric_for_compare)\n",
