--- a/aio.ipynb
+++ b/aio.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-05 17:00:02,327\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
+      "2024-05-06 15:25:33,825\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
       "{97: {'val': {'accuracy': 86.18, 'F1-score': 85.99, 'loss': 0.39},\n",
       "      'test': {'accuracy': 85.32, 'F1-score': 85.26, 'loss': 0.42}},\n",
       " 53: {'val': {'accuracy': 85.36, 'F1-score': 84.59, 'loss': 0.54},\n",
@@ -80,7 +80,7 @@
       "{'val': {'accuracy': 85.72, 'F1-score': 85.23, 'loss': 0.45},\n",
       " 'test': {'accuracy': 85.08, 'F1-score': 84.7, 'loss': 0.46}}\n",
       "---------TWR---------\n",
-      "2024-05-05 17:00:02,331\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-06 15:25:33,831\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  97 53 10 43 46\n",
       "{97: {'val': {'accuracy': 86.07, 'F1-score': 85.67, 'loss': 2.16},\n",
       "      'test': {'accuracy': 86.37, 'F1-score': 86.08, 'loss': 2.16}},\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -140,19 +140,19 @@
      "output_type": "stream",
      "text": [
       "---------TWR-H/P---------\n",
-      "28 37 36 23 48\n",
-      "{97: {'val': {'acc_pipline': 86.61, 'f1_pipline': 86.3, 'accuracy': 85.91, 'F1-score': 85.67, 'loss': 2.11},\n",
-      "      'test': {'acc_pipline': 86.35, 'f1_pipline': 86.14, 'accuracy': 85.88, 'F1-score': 85.76, 'loss': 2.14}},\n",
-      " 53: {'val': {'acc_pipline': 86.25, 'f1_pipline': 85.9, 'accuracy': 85.61, 'F1-score': 85.63, 'loss': 2.12},\n",
-      "      'test': {'acc_pipline': 86.26, 'f1_pipline': 86.1, 'accuracy': 85.68, 'F1-score': 85.77, 'loss': 2.22}},\n",
-      " 43: {'val': {'acc_pipline': 86.27, 'f1_pipline': 86.0, 'accuracy': 85.66, 'F1-score': 85.48, 'loss': 2.08},\n",
-      "      'test': {'acc_pipline': 86.31, 'f1_pipline': 86.1, 'accuracy': 85.58, 'F1-score': 85.43, 'loss': 2.09}},\n",
-      " 46: {'val': {'acc_pipline': 86.48, 'f1_pipline': 86.17, 'accuracy': 86.29, 'F1-score': 86.08, 'loss': 1.93},\n",
-      "      'test': {'acc_pipline': 86.1, 'f1_pipline': 85.93, 'accuracy': 85.57, 'F1-score': 85.45, 'loss': 1.96}},\n",
-      " 10: {'val': {'acc_pipline': 86.27, 'f1_pipline': 85.89, 'accuracy': 85.47, 'F1-score': 85.33, 'loss': 2.25},\n",
-      "      'test': {'acc_pipline': 86.16, 'f1_pipline': 85.93, 'accuracy': 85.1, 'F1-score': 85.06, 'loss': 2.37}}}\n",
-      "{'val': {'acc_pipline': 86.38, 'f1_pipline': 86.05, 'accuracy': 85.79, 'F1-score': 85.64, 'loss': 2.1},\n",
-      " 'test': {'acc_pipline': 86.24, 'f1_pipline': 86.04, 'accuracy': 85.56, 'F1-score': 85.49, 'loss': 2.16}}\n"
+      "14 23 6 17 5\n",
+      "{97: {'val': {'acc_pipline': 86.43, 'f1_pipline': 86.08, 'accuracy': 85.91, 'F1-score': 85.6, 'loss': 2.09},\n",
+      "      'test': {'acc_pipline': 86.19, 'f1_pipline': 85.92, 'accuracy': 86.01, 'F1-score': 85.81, 'loss': 2.15}},\n",
+      " 53: {'val': {'acc_pipline': 86.22, 'f1_pipline': 85.72, 'accuracy': 85.52, 'F1-score': 85.21, 'loss': 2.26},\n",
+      "      'test': {'acc_pipline': 86.08, 'f1_pipline': 85.71, 'accuracy': 85.88, 'F1-score': 85.67, 'loss': 2.38}},\n",
+      " 10: {'val': {'acc_pipline': 86.24, 'f1_pipline': 85.78, 'accuracy': 85.62, 'F1-score': 85.35, 'loss': 2.09},\n",
+      "      'test': {'acc_pipline': 85.92, 'f1_pipline': 85.56, 'accuracy': 85.83, 'F1-score': 85.66, 'loss': 2.14}},\n",
+      " 43: {'val': {'acc_pipline': 86.29, 'f1_pipline': 86.0, 'accuracy': 85.96, 'F1-score': 85.81, 'loss': 1.93},\n",
+      "      'test': {'acc_pipline': 86.12, 'f1_pipline': 85.98, 'accuracy': 85.73, 'F1-score': 85.66, 'loss': 1.99}},\n",
+      " 46: {'val': {'acc_pipline': 86.23, 'f1_pipline': 85.88, 'accuracy': 85.59, 'F1-score': 85.27, 'loss': 2.03},\n",
+      "      'test': {'acc_pipline': 85.99, 'f1_pipline': 85.75, 'accuracy': 85.68, 'F1-score': 85.51, 'loss': 2.01}}}\n",
+      "{'val': {'acc_pipline': 86.28, 'f1_pipline': 85.89, 'accuracy': 85.72, 'F1-score': 85.45, 'loss': 2.08},\n",
+      " 'test': {'acc_pipline': 86.06, 'f1_pipline': 85.78, 'accuracy': 85.83, 'F1-score': 85.66, 'loss': 2.13}}\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
     "print(\"---------TWR-H/P---------\")\n",
     "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
     "metric_for_compare = \"acc_pipline\"\n",
-    "# metric_for_compare = \"accuracy\"\n",
+    "metric_for_compare = \"accuracy\"\n",
     "\n",
     "ratio = 0.2\n",
     "# times=\"None\"\n",
@@ -3391,7 +3391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -3399,16 +3399,15 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-05 17:03:33,531 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/31\u001b[0m\n",
-      "2024-05-05 17:03:33,531\u001b[32m <INFO> WatchDog: success/total: 5/6\u001b[0m\n",
-      "{78: {'val': {'accuracy': 91.43, 'F1-score': 88.46, 'loss': 0.26}},\n",
+      "2024-05-06 14:45:10,496\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
+      "{31: {'val': {'accuracy': 91.34, 'F1-score': 88.32, 'loss': 0.26}},\n",
       " 22: {'val': {'accuracy': 91.42, 'F1-score': 88.47, 'loss': 0.26}},\n",
-      " 44: {'val': {'accuracy': 91.34, 'F1-score': 88.31, 'loss': 0.26}},\n",
-      " 2: {'val': {'accuracy': 91.32, 'F1-score': 88.3, 'loss': 0.26}},\n",
-      " 52: {'val': {'accuracy': 91.26, 'F1-score': 88.17, 'loss': 0.26}}}\n",
-      "{'val': {'accuracy': 91.35, 'F1-score': 88.34, 'loss': 0.26}}\n",
+      " 10: {'val': {'accuracy': 91.45, 'F1-score': 88.46, 'loss': 0.26}},\n",
+      " 9: {'val': {'accuracy': 91.32, 'F1-score': 88.29, 'loss': 0.26}},\n",
+      " 0: {'val': {'accuracy': 91.37, 'F1-score': 88.36, 'loss': 0.25}}}\n",
+      "{'val': {'accuracy': 91.38, 'F1-score': 88.38, 'loss': 0.26}}\n",
       "---------TWR---------\n",
-      "2024-05-05 17:03:33,535\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-06 14:45:10,500\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  31 22 10 9 0\n",
       "{31: {'val': {'accuracy': 91.27, 'F1-score': 88.28, 'loss': 1.15}},\n",
       " 22: {'val': {'accuracy': 91.26, 'F1-score': 88.31, 'loss': 1.14}},\n",
@@ -3432,11 +3431,12 @@
     "\n",
     "print(\"---------baseline---------\")\n",
     "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(\"outputs/QQP/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/\")\n",
-    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "seeds = \"31 22 10 9 0\"\n",
+    "metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
     "pp(metric_dict_topk)\n",
     "pp(mean)\n",
-    "# seeds = \"36 43 51 34 28\"\n",
-    "# pp(WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})[1])\n",
+    "\n",
     "\n",
     "print(\"---------TWR---------\")\n",
     "seeds_dir = \"outputs/QQP/bert-base-uncased/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05\"\n",
@@ -3455,21 +3455,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------TWR-H/P---------\n",
+      "2024-05-06 14:52:12,012 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/bert-base-uncased/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=0/1/16/2e-06/18\u001b[0m\n",
+      "3 8 9 0 2\n",
+      "{31: {'val': {'acc_pipline': 91.32, 'f1_pipline': 88.15, 'accuracy': 91.15, 'F1-score': 87.86, 'loss': 1.35}},\n",
+      " 9: {'val': {'acc_pipline': 91.46, 'f1_pipline': 88.38, 'accuracy': 91.08, 'F1-score': 87.76, 'loss': 1.34}},\n",
+      " 10: {'val': {'acc_pipline': 91.34, 'f1_pipline': 88.13, 'accuracy': 91.07, 'F1-score': 87.67, 'loss': 1.38}},\n",
+      " 0: {'val': {'acc_pipline': 91.36, 'f1_pipline': 88.17, 'accuracy': 91.04, 'F1-score': 87.62, 'loss': 1.35}},\n",
+      " 22: {'val': {'acc_pipline': 91.43, 'f1_pipline': 88.28, 'accuracy': 90.97, 'F1-score': 87.55, 'loss': 1.33}}}\n",
+      "{'val': {'acc_pipline': 91.38, 'f1_pipline': 88.22, 'accuracy': 91.06, 'F1-score': 87.69, 'loss': 1.35}}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"---------TWR-H/P---------\")\n",
     "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
     "metric_for_compare = \"acc_pipline\"\n",
-    "metric_for_compare = \"accuracy\"\n",
+    "# metric_for_compare = \"accuracy\"\n",
     "\n",
     "ratio = 0.2\n",
     "\n",
     "metric_dicts = dict()\n",
     "seeds = []\n",
     "for seed_of_stage1 in best_seeds_of_stage1:\n",
-    "    seeds_dir = f\"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/3/16/2e-06\"\n",
+    "    seeds_dir = f\"outputs/QQP/bert-base-uncased/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
     "\n",
     "    seeds_dir = Path(seeds_dir)\n",
     "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
@@ -3520,7 +3536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -3528,7 +3544,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-05 17:03:54,846\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
+      "2024-05-06 15:33:29,940\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
       "{44: {'val': {'accuracy': 88.24, 'F1-score': 91.55, 'loss': 0.28},\n",
       "      'test': {'accuracy': 87.65, 'F1-score': 90.89, 'loss': 0.33}},\n",
       " 13: {'val': {'accuracy': 90.93, 'F1-score': 93.31, 'loss': 0.24},\n",
@@ -3542,7 +3558,7 @@
       "{'val': {'accuracy': 89.02, 'F1-score': 92.07, 'loss': 0.27},\n",
       " 'test': {'accuracy': 87.5, 'F1-score': 90.72, 'loss': 0.31}}\n",
       "---------TWR---------\n",
-      "2024-05-05 17:03:54,850\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-06 15:33:29,944\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  9 37 59 2 44\n",
       "{9: {'val': {'accuracy': 88.24, 'F1-score': 91.58, 'loss': 1.51},\n",
       "     'test': {'accuracy': 88.41, 'F1-score': 91.47, 'loss': 1.54}},\n",
@@ -3599,7 +3615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
