--- a/aio.ipynb
+++ b/aio.ipynb
@@ -3039,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -3047,21 +3047,21 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-06 14:38:23,414\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n"
+      "2024-05-06 21:52:24,420\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
+      "{33: {'val': {'accuracy': 91.48, 'F1-score': 88.64, 'loss': 0.23}},\n",
+      " 18: {'val': {'accuracy': 91.54, 'F1-score': 88.72, 'loss': 0.23}},\n",
+      " 78: {'val': {'accuracy': 91.54, 'F1-score': 88.75, 'loss': 0.23}},\n",
+      " 31: {'val': {'accuracy': 91.41, 'F1-score': 88.54, 'loss': 0.23}},\n",
+      " 23: {'val': {'accuracy': 91.6, 'F1-score': 88.79, 'loss': 0.23}}}\n",
+      "{'val': {'accuracy': 91.51, 'F1-score': 88.69, 'loss': 0.23}}\n",
+      "---------TWR---------\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: {'val': {'accuracy': 91.62, 'F1-score': 88.8, 'loss': 0.23}},\n",
-      " 23: {'val': {'accuracy': 91.6, 'F1-score': 88.79, 'loss': 0.23}},\n",
-      " 78: {'val': {'accuracy': 91.54, 'F1-score': 88.75, 'loss': 0.23}},\n",
-      " 18: {'val': {'accuracy': 91.54, 'F1-score': 88.72, 'loss': 0.23}},\n",
-      " 33: {'val': {'accuracy': 91.48, 'F1-score': 88.64, 'loss': 0.23}}}\n",
-      "{'val': {'accuracy': 91.56, 'F1-score': 88.74, 'loss': 0.23}}\n",
-      "---------TWR---------\n",
-      "2024-05-06 14:38:23,637\u001b[32m <INFO> WatchDog: success/total: 30/30\u001b[0m\n",
+      "2024-05-06 21:52:24,643\u001b[32m <INFO> WatchDog: success/total: 30/30\u001b[0m\n",
       "best_sedds_of_stage1:  33 18 78 31 23\n",
       "{33: {'val': {'accuracy': 91.45, 'F1-score': 88.69, 'loss': 1.02}},\n",
       " 18: {'val': {'accuracy': 91.45, 'F1-score': 88.64, 'loss': 1.04}},\n",
@@ -3088,9 +3088,9 @@
     "#     if int(seed_dir.name) not in metric_dicts.keys():\n",
     "#         shutil.rmtree(seed_dir)\n",
     "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
-    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
-    "# seeds = \"29 109 38 14 44\"\n",
-    "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "seeds = \"33 18 78 31 23\"\n",
+    "metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
     "pp(metric_dict_topk)\n",
     "pp(mean)\n",
     "\n",
@@ -4022,7 +4022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -4030,12 +4030,15 @@
      "output_type": "stream",
      "text": [
       "2 2\n",
-      "[[[0, 0, 0, 0, 0], [85.83, 85.46, 85.15, 84.66, 84.08]], [[0, 0, 0, 0, 0], [88.24, 88.36, 88.16, 88.22, 88.27]]]\n"
+      "[[[0, 0, 0, 0, 0], [0, 0, 0, 0, 0]], [[0, 0, 0, 0, 0], [0, 0, 0, 0, 0]]]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "from toolkit.training import WatchDog\n",
+    "from toolkit.metric import MetricDict\n",
+    "from pathlib import Path\n",
     "\n",
     "\n",
     "datasets = [[\"LCQMC\", \"BQ\"], [\"QQP\", \"MRPC\"]]\n",
@@ -4063,7 +4066,7 @@
     "                    best_seeds_of_stage1 = \"9 37 59 2 44\".split()\n",
     "                    seeds_dirtmp = \"outputs/MRPC/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
     "                case \"QQP\":\n",
-    "                    best_seeds_of_stage1 = \"9 37 59 2 44\".split()\n",
+    "                    best_seeds_of_stage1 = \"33 18 78 31 23\".split()\n",
     "                    seeds_dirtmp = \"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
     "            mean = None\n",
     "            try:\n",
