--- a/aio.ipynb
+++ b/aio.ipynb
@@ -3536,7 +3536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -3544,21 +3544,21 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-06 15:33:29,940\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
-      "{44: {'val': {'accuracy': 88.24, 'F1-score': 91.55, 'loss': 0.28},\n",
-      "      'test': {'accuracy': 87.65, 'F1-score': 90.89, 'loss': 0.33}},\n",
-      " 13: {'val': {'accuracy': 90.93, 'F1-score': 93.31, 'loss': 0.24},\n",
-      "      'test': {'accuracy': 87.65, 'F1-score': 90.59, 'loss': 0.32}},\n",
-      " 56: {'val': {'accuracy': 88.73, 'F1-score': 91.76, 'loss': 0.28},\n",
-      "      'test': {'accuracy': 87.54, 'F1-score': 90.65, 'loss': 0.3}},\n",
-      " 43: {'val': {'accuracy': 88.48, 'F1-score': 91.74, 'loss': 0.26},\n",
-      "      'test': {'accuracy': 87.36, 'F1-score': 90.74, 'loss': 0.3}},\n",
-      " 9: {'val': {'accuracy': 88.73, 'F1-score': 91.99, 'loss': 0.28},\n",
-      "     'test': {'accuracy': 87.3, 'F1-score': 90.73, 'loss': 0.3}}}\n",
-      "{'val': {'accuracy': 89.02, 'F1-score': 92.07, 'loss': 0.27},\n",
-      " 'test': {'accuracy': 87.5, 'F1-score': 90.72, 'loss': 0.31}}\n",
+      "2024-05-06 21:52:01,205\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
+      "{9: {'val': {'accuracy': 88.73, 'F1-score': 91.99, 'loss': 0.28},\n",
+      "     'test': {'accuracy': 87.3, 'F1-score': 90.73, 'loss': 0.3}},\n",
+      " 37: {'val': {'accuracy': 89.22, 'F1-score': 92.25, 'loss': 0.28},\n",
+      "      'test': {'accuracy': 86.2, 'F1-score': 89.69, 'loss': 0.33}},\n",
+      " 59: {'val': {'accuracy': 89.46, 'F1-score': 92.22, 'loss': 0.26},\n",
+      "      'test': {'accuracy': 86.96, 'F1-score': 90.0, 'loss': 0.3}},\n",
+      " 2: {'val': {'accuracy': 89.46, 'F1-score': 92.39, 'loss': 0.28},\n",
+      "     'test': {'accuracy': 86.84, 'F1-score': 90.31, 'loss': 0.33}},\n",
+      " 44: {'val': {'accuracy': 88.24, 'F1-score': 91.55, 'loss': 0.28},\n",
+      "      'test': {'accuracy': 87.65, 'F1-score': 90.89, 'loss': 0.33}}}\n",
+      "{'val': {'accuracy': 89.02, 'F1-score': 92.08, 'loss': 0.28},\n",
+      " 'test': {'accuracy': 86.99, 'F1-score': 90.32, 'loss': 0.32}}\n",
       "---------TWR---------\n",
-      "2024-05-06 15:33:29,944\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-06 21:52:01,211\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  9 37 59 2 44\n",
       "{9: {'val': {'accuracy': 88.24, 'F1-score': 91.58, 'loss': 1.51},\n",
       "     'test': {'accuracy': 88.41, 'F1-score': 91.47, 'loss': 1.54}},\n",
@@ -3591,9 +3591,9 @@
     "#     if int(seed_dir.name) not in metric_dicts.keys():\n",
     "#         shutil.rmtree(seed_dir)\n",
     "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
-    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
-    "# seeds = \"29 109 38 14 44\"\n",
-    "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "seeds = \"9 37 59 2 44\"\n",
+    "metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
     "pp(metric_dict_topk)\n",
     "pp(mean)\n",
     "\n",
