--- a/aio.ipynb
+++ b/aio.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-06 15:25:33,825\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
+      "2024-05-06 22:01:52,861\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
       "{97: {'val': {'accuracy': 86.18, 'F1-score': 85.99, 'loss': 0.39},\n",
       "      'test': {'accuracy': 85.32, 'F1-score': 85.26, 'loss': 0.42}},\n",
       " 53: {'val': {'accuracy': 85.36, 'F1-score': 84.59, 'loss': 0.54},\n",
@@ -80,7 +80,7 @@
       "{'val': {'accuracy': 85.72, 'F1-score': 85.23, 'loss': 0.45},\n",
       " 'test': {'accuracy': 85.08, 'F1-score': 84.7, 'loss': 0.46}}\n",
       "---------TWR---------\n",
-      "2024-05-06 15:25:33,831\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-06 22:01:52,865\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  97 53 10 43 46\n",
       "{97: {'val': {'accuracy': 86.07, 'F1-score': 85.67, 'loss': 2.16},\n",
       "      'test': {'accuracy': 86.37, 'F1-score': 86.08, 'loss': 2.16}},\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -4022,7 +4022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -4030,7 +4030,7 @@
      "output_type": "stream",
      "text": [
       "2 2\n",
-      "[[[0, 0, 0, 0, 0], [0, 0, 0, 0, 0]], [[0, 0, 0, 0, 0], [0, 0, 0, 0, 0]]]\n"
+      "[[[0, 0, 0, 0, 0], [85.83, 85.46, 85.15, 84.66, 84.08]], [[0, 0, 0, 0, 0], [88.24, 88.36, 88.16, 88.22, 88.27]]]\n"
      ]
     }
    ],
@@ -4040,6 +4040,9 @@
     "from toolkit.metric import MetricDict\n",
     "from pathlib import Path\n",
     "\n",
+    "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
+    "metric_for_compare = \"acc_pipline\"\n",
+    "metric_for_compare = \"accuracy\"\n",
     "\n",
     "datasets = [[\"LCQMC\", \"BQ\"], [\"QQP\", \"MRPC\"]]\n",
     "row, col = len(datasets), len(datasets[0])\n",
@@ -4069,20 +4072,27 @@
     "                    best_seeds_of_stage1 = \"33 18 78 31 23\".split()\n",
     "                    seeds_dirtmp = \"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
     "            mean = None\n",
+    "            seeds = []\n",
     "            try:\n",
     "                for seed_of_stage1 in best_seeds_of_stage1:\n",
     "                    seeds_dir = seeds_dirtmp.format(ratio=ratio, seed_of_stage1=seed_of_stage1)\n",
     "\n",
     "                    seeds_dir = Path(seeds_dir)\n",
     "                    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
-    "                    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1)\n",
+    "                    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric_for_compare)\n",
+    "                    seeds_not_del = []\n",
+    "                    for metric in [\"acc_pipline\", \"accuracy\"]:\n",
+    "                        metric_dict_topk1, _ = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric)\n",
+    "                        seeds_not_del.append(list(metric_dict_topk1.keys())[0])\n",
+    "                    # print(seeds_not_del)\n",
     "                    if _mean:\n",
     "                        metric_dicts[seed_of_stage1] = _mean\n",
     "                        best_seed = list(_metric_dict_topk.keys())[0]\n",
     "                        seeds.append(str(best_seed))\n",
     "                        for seed_dir in seeds_dir.iterdir():\n",
-    "                            if int(seed_dir.name) != best_seed and int(seed_dir.name) in _metric_dicts:\n",
+    "                            if int(seed_dir.name) != best_seed and int(seed_dir.name) not in seeds_not_del and int(seed_dir.name) in _metric_dicts:\n",
     "                                shutil.rmtree(seed_dir)\n",
+    "                                # print(seed_dir)\n",
     "                metric_dict_topk, mean = WatchDog.topk(metric_dicts, len(best_seeds_of_stage1))\n",
     "            except Exception as e:\n",
     "                # print(e)\n",
